# SergioSBAgentPOC

./: .gitignore  README.md  atlassian_agent.py  github_assitant.py  input_handler.py  main.py  models.py  pyproject.toml  secureboot_enabled_agent.py
eero_secureboot_agent/: __init__.py  main.py
